# Industrial-Graph-Analytics-Dashboard

./: Cargo.toml  Dockerfile  MIT License.md  README.md  queries.json
src/: main.rs  queries.rs
templates/: base.html  dashboard.html  login.html
