[package]
name = "neo4j_dashboard"
version = "0.5.0"
edition = "2021"
authors = ["Angel A. Urbina"]
default-run = "neo4j_dashboard"

[dependencies]
actix-web = "4.4"
neo4rs = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
futures = "0.3"
chrono = "0.4"
dotenv = "0.15"
itertools = "0.10"
# Añadimos reqwest por si queremos hacer llamadas HTTP desde el backend en el futuro, 
# aunque la lógica AI será frontend.
reqwest = { version = "0.11", features = ["json"] }
